--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 tui = "0.19.0"
 crossterm = "0.25"
 serde = { version = "1.0.145", features = ["derive"] }
+once_cell = "1.15.0"
+clap = { version = "4.0", features = ["derive"] }
 serde_json = "1.0"
