--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.145", features = ["derive"] }
 once_cell = "1.15.0"
 clap = { version = "4.0", features = ["derive"] }
 serde_json = "1.0"
+rand = "0.5.0"
